# Telegram-ACR-lyrics-bot

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  bot.py  lyrics.py  pyproject.toml  requirements.txt
acrcloud/: recognizer.py
bot/: acr_identify.py  bot.py  lyrics.py
bot/json/: file_0.json
json/: file_5.json
voice/: file_0.oga  file_5.oga
